# in3

./: 1_Intro.in  2_How_to_look_at_a_document.in  3_In_language_specification.in  4_The_in3_intermediate_data_structure.in  5_Stylesheets.in  6_images.in  6_utilities.in  7_utilities.in  8_specials.in  90_testtext1.in  91_testtext1.in  92_testtext2.in  93_testtext3.in  94_testtext4.in  95_testtext5.in  96_testtext6.in  99_testtext.in  Documentation.in  README.md  codefile  configure.in  configyour.in.sh  gnuplot.gnuplot  imageinfo.sh  in.tmac  in3.pl  in3charmap  in3charmap0  in3charmap1  in3charmap2  in3cover.xcf  in3html.pl  in3logo.xcf  in3multipas.pl  in3tbl.pl  in_page.xcf  index.in  infromodt.sh  meta.in  mk_cover.sh  (+7 more)
